Updated with search

--- a/features/application/index.html
+++ b/features/application/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <link rel="canonical" href="https://zendframework.github.io/zend-expressive/features/application/"> 
     <link rel="shortcut icon" href="../../img/favicon.ico">
 
     <title>Applications - Expressive</title>
@@ -669,6 +670,7 @@ signature:</p>
     <script src="../../js/bootstrap-3.0.3.min.js"></script>
     <script src="../../js/prism-zf.js"></script>
 
+    <script>var base_url = '../..';</script>
     <script data-main="../../mkdocs/js/search.js" src="../../mkdocs/js/require.js"></script>
     <script src="../../js/base.js"></script>
 
