--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="zend-expressive: PSR-7 Middleware Microframework">   
+    <meta name="description" content="zend-expressive: PSR-7 Middleware Microframework">  
+    <link rel="canonical" href="https://zendframework.github.io/zend-expressive/"> 
     <link rel="shortcut icon" href="./img/favicon.ico">
 
     <title>Expressive</title>
@@ -504,6 +505,7 @@ middleware application today!</p></div>
     <script src="./js/bootstrap-3.0.3.min.js"></script>
     <script src="./js/prism-zf.js"></script>
 
+    <script>var base_url = '.';</script>
     <script data-main="./mkdocs/js/search.js" src="./mkdocs/js/require.js"></script>
     <script src="./js/base.js"></script>
 
@@ -539,6 +541,6 @@ middleware application today!</p></div>
 </html>
 
 <!--
-MkDocs version : 0.14.0
-Build Date UTC : 2016-01-21 23:21:15.617567
+MkDocs version : 0.15.0
+Build Date UTC : 2016-01-22 23:24:48.561910
 -->
