--- a/404.html
+++ b/404.html
@@ -471,6 +471,7 @@
     <script src="./js/bootstrap-3.0.3.min.js"></script>
     <script src="./js/prism-zf.js"></script>
 
+    <script>var base_url = '.';</script>
     <script data-main="./mkdocs/js/search.js" src="./mkdocs/js/require.js"></script>
     <script src="./js/base.js"></script>
 
