--- a/cookbook/custom-404-page-handling/index.html
+++ b/cookbook/custom-404-page-handling/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <link rel="canonical" href="https://zendframework.github.io/zend-expressive/cookbook/custom-404-page-handling/"> 
     <link rel="shortcut icon" href="../../img/favicon.ico">
 
     <title>Setting custom 404 page handling - Expressive</title>
@@ -586,6 +587,7 @@ middleware, as you only want it to execute if no routed middleware was selected.
     <script src="../../js/bootstrap-3.0.3.min.js"></script>
     <script src="../../js/prism-zf.js"></script>
 
+    <script>var base_url = '../..';</script>
     <script data-main="../../mkdocs/js/search.js" src="../../mkdocs/js/require.js"></script>
     <script src="../../js/base.js"></script>
 
